--- a/data/nlu/contact_info.yml
+++ b/data/nlu/contact_info.yml
@@ -25,6 +25,15 @@ nlu:
       - [心理学院](department)教务的联系方式
       - [法学院](department)教务处邮箱
       - [师范学院](department)教务部联系方式
+      - 选课没选上,想找[数学院](department)的教务秘书申请加位
+      - 您好，我需要加位，被告知需要拿申请书去找学院的教学秘书，请问[人文学院](department)的教学秘书是哪位老师，去哪里找，有教学秘书的联系方式吗？谢谢！
+      - 请问胡惠媛老师和[化院](department)秘书处的办公室在哪里呀？十分感谢
+      - 我想申请课程加位，找任课老师签完字后，怎么找教学秘书？[数院](department)的教学秘书在哪？
+      - 请问19级[社会学](department)教务秘书邮箱是什么？想咨询一下培养方案和选课的事情？
+      - 想要了解[法学院](department)教务处的联系电话
+      - 请问[材料学院](department)教学秘书的联系方式是多少？
+      - 请问[马原](department)教学秘书的邮箱或联系电话是多少呢，我想申请加位
+
 
   - intent: 常用联系方式/校内常用电话
     examples: |
@@ -43,13 +52,31 @@ nlu:
       - [体测中心](department)联系方式
       - 深圳大学[学生部](department)联系方式
       - 我需要宽带的管理员的联系方式，但我找不到
+      - 学校itest系统维护部门的电话
+      - 希望能帮我找到学校itest英语在线考试系统的管理部门或者维护部门的电话，谢谢
+      - 南图书馆管理联系电话
+      - 我们学校有专门指导就业的老师吗？求个联系方式
+      - 丽湖校区南区菜鸟驿站电话
+      - 学生宿舍阿姨电话
+      - 想问下乔梧阁学生宿舍值班室的电话，谢谢。我宿舍空调好像忘关了。。。
+      - 冬筑宿舍宿管办公处电话
+      - 想知道冬筑或秋瑟宿舍宿管办公处电话
+      - 求问经济学院电话
+      - 您好，想咨询一下经济学院的电话
       
   - intent: 常用联系方式/教师联系方式
     examples: |
       - 教师联系方式查询
+      - 想向日语（2）（二外）课程教师董国民老师咨询申请免听事宜，想获得老师的联系方式
+      - 麻烦找一下陆小微老师和闫少华老师的联系方式，导师要求加他们的课，但是位置满了
+      - 我想要联系公选课环球音乐风彩的罗婷婷老师，开学4周了，一点动静都没有我好慌。。。
+      - 请问法学院罗锐老师的联系方式是什么，需要找他申请免听。
+      - 想问一下[外国语学院](department)董国民老师的手机电话号码，他的办公室电话号码好像打不通。
       - 请教一下[传播学院](department)老师们的联系方式在哪里可以查到
       - [管院](department)电商教务联系方式
+      - 请问教务秘书郑蜀梅老师的联系方式是多少
       - 宋鸣笛老师联系方式
+      - [管理学院](department)范璧老师的联系方式
       - [外院](department)孟睿思老师联系方式
       - 教师联系方式
       - 老师联系方式
@@ -206,9 +233,14 @@ nlu:
       - 社科信息素养教程姚兰老师联系方式
       - 询问教微电子综合实验的耿艳霞老师的办公室地址和联系方式
       - 求[数学与统计学院](department)杨和平老师的联系方式和办公室地址，谢谢。
+      - 图文信息处理课没选上，想问问彭祎祎的联系方式，看看能不能加位。
+      - 我双修了汉语言文学的课程，怎么联系那边的老师加位置呢，去哪里找到他们的联系方式
 
   - intent: 常用联系方式/其他
     examples: |
       - 常用联系方式
       - 校内常用联系方式
       - 教学秘书
+      - 想问一下[管院](department)关于选课的老师的办公室和电话
+      - 你好，我想咨询[心理学院](department)办秘书的工作地点和工作时间，想要找老师加位
+
