--- a/data/nlu/employment_guidance.yml
+++ b/data/nlu/employment_guidance.yml
@@ -183,4 +183,46 @@ nlu:
       - 关于求职创业补贴
       - 求职创业补贴
       - 暂缓就业
+      - 大一英专生 家里人希望辅修汉语言文学专业 增加就业机会 想咨询一下老师或是有辅修或者对辅修方面有所了解的师兄师姐是否有辅修的必要（如未来就业时用人单位是否会考虑你的辅修专业）
+      - 电子就业协议审核
+      - 请问，公众号广东大学生就业创新里面”电子就业信息“已填写提交（周四提交），学校审核要需要多久才能完成，周天之前可以下载三方吗？
+      - 荔园晨风入口
+      - 荔园晨风入口在哪呢？是已经没有这个平台了吗？那深大人找兼职在什么网站
+      - 研究生就业推荐表上填写的联系人
+      - 请问硕士毕业生就业推荐表上的联系人应该填写就业指导中心的哪位老师
+      - 就业指导中心上班时间
+      - 想咨询一下，学活就业指导中心的具体上班时间是什么时候呢？
+      - 成绩单盖章和就业推荐表盖章
+      - 用人单位要求成绩单上有学校盖章，还有就业推荐表上有学院和学校的盖章（两个章），应该去哪里办理
+      - 毕业生三方毁约/违约
+      - 你好，我有以下疑问：1、本人去年跟A企业签订了三方协议，但是现在想跟B企业重新签约，所以我正在跟A企业毁约，并且期望拿到A企业的违约函。但A企业要求我填写它给的一个申请表才给我违约函，该申请表需要学校盖章，请问我应该去找谁盖章？谢谢！2、学校允许毕业生违约几次呢？谢谢！
+      - 暂缓就业
+      - 请问今年的暂缓就业怎么办理？
+      - 就业指导中心
+      - 请问丽湖有无与就业相关的指导中心？目前只能在粤海这边办理吗？丽湖没有其他待办的地点吗？
+      - 学校就业指导部门盖章
+      - 研究生选调生表格要求学校就业指导部门盖章，请问去哪里盖章？和本科就业指导部门盖章地方相同吗？
+      - 毕业生就业补贴申请
+      - 请问毕业生就业补贴在哪里申请的呢，没找到入口
+      - 网上签约
+      - 我是研究生 找到工作了 公司要求寄三方，但是现在还没发 想问下深圳大学有没有网上签约这种形式
+      - 请问哪里可以查看学院的就业去向报告？
+      - 想知道学长学姐毕业去向是哪里
+      - 报到证
+      - 您好， 想咨询一下，第二批申请派遣的大概什么时候能拿到报到证呢？
+      - 求职创业补贴发放
+      - 5月8日，广东省教育厅联合省人社厅等七部门印发《关于推进2020年广东省普通高校毕业生就业工作若干政策措施》，要求对在广东省普通高等学校、职业院校、技工院校就读的湖北籍2020届毕业生按每人2000元标准给予求职创业补贴，及时发放到位。 别的学校的同学上个月底已经都收到了，请问咱们深大的什么时候发放到位？是否需要我们自己去申请？湖北籍应届的硕士毕业生是否也有？
+      - 就业派遣进队及报到证、毕业证发放时间咨询
+      - 您好，我已经在“广东大学生就业创业”小程序上上报了就业派遣方向，目前是待院系审核状态，请问什么时候可以审核通过？报到证具体发放时间是什么时候？因为7月10号需要去单位报到，毕业证也是6月底可以拿到是吗？
+      - 工作就业报名需要
+      - 就业报名需要
+      - 三方协议
+      - 我是19届毕业生结业，今年参加校招入职需要提交三方协议，但是在广东大学生就业创业公众号办事大厅注册个人信息后显示电子就业协议未开启，无法下载，请问是需要学校审批吗，还有去年的三方协议还能用吗
+      - 三方协议和就业推荐表
+      - 大四毕业生，三方协议原件及就业推荐表都放在了学校。现在公司放我在20号前将这两个文件寄给它。我可以去学校拿吗？或者说有其他办法解决这个问题吗？
+      - 就业指导
+      - 新生想找一些工作 但是不知道在哪看 联系谁
+      - 就业派遣进队及报到证、毕业证发放时间咨询
+      - 家庭困难就业补贴
+      - 学校就业指导部门盖章
 
