--- a/data/nlu/graduate_admission.yml
+++ b/data/nlu/graduate_admission.yml
@@ -55,6 +55,12 @@ nlu:
       - 关于推免、保研
       - 保研
       - 关于保研
-      - 保研
       - 保研条件
-      - 保研
+      - 考研GPA
+      - 请问选修课成绩影不影响考研的那个本科GPA？ 请问这个找哪个部门，联系方式是什么？
+      - 有关2020届硕士研究生住宿安排事宜咨询
+      - 昨天看到学校已公布第二批2020届硕士研究生拟录取名单，目前硕士研究生招生工作也接近了尾声，所以想咨询一下粤海和沧海校区的2020届硕士研究生的宿舍安排通知大概会在什么时候公布呢？鉴于疫情的因素，本校录取的研究生在办理本科退宿时是否能直接搬进新宿舍呢？此外，如果本校录取、并且同学院同专业的同学想申请研究生期间住在同一个宿舍，该如何办理事务呢？期待回复，感谢解答！
+      - 深大本科申请报名深大研究生流程?还有每个学院有没有给自己本科学生预留研究生名额?
+      - 我想问一下关于本科生保研的相关信息在哪里能查到。在“深圳大学研究生招生网”中我能查到章程，但一些具体的硬性规定和加分项我没能找到。
+      - 挂科记录会影响一些申请资格吗
+      - 想问一下是不是挂过科不能申请保研了，还有交换资格、奖学金
