--- a/data/nlu/hospital.yml
+++ b/data/nlu/hospital.yml
@@ -80,6 +80,90 @@ nlu:
       - 校医院可以刷二级社保卡吗
       - 我的医保昨天就已经缴过费了，也有流水账可查，但是缴费系统一直显示我的状态是未缴费，请问我该怎么办
       - 就是我的医疗保险错过了9月份统一缴费的时间，有没有什么办法补缴吗？因为最近需要使用
+      - 校医院
+      - 学校校医院有眼药水卖吗？多少钱？最近用眼过度了
+      - 校医院是医保定点机构吗
+      - 疫苗接种证明
+      - 留学需要开疫苗接种证明，全程在学校接种的，请问可以去校医院开证明吗？需要中英文版本的。
+      - 请问校医院x光器械什么时候能整好？整好后能否通知一声？发短信即可
+      - 学生回家过年的核酸检测
+      - 校方有无安排具体时间对回老家过年的同学进行核酸检测？
+      - 校医院皮肤科
+      - 请问校医院的皮肤科为什么这个学期停止接诊了呢？希望尽快开放！
+      - 今天生病人很不舒服就请假了一节课去校医院看医生，但是老师说要我补请假条给她，可我没有在校医院开证明，所以我需要回去校医院开证明，再给辅导员开病假条吗？
+      - 因为需要填写社会实践表，想问问去年参加了校医院新生体检的志愿活动算在实践范围内吗？如果算应该找哪方盖章签名呢？
+      - 体检报告
+      - 我是艺术学部研究生，如何拿到入学时的体检报告
+      - 请问校医院可以不挂号直接买药吗？
+      - 医保不小心重复购买了，请问何时退费
+      - 参保后一定要办医保卡吗？
+      - 已经参保深大的医保，医保卡一定要办吗？
+      - 你好，请问一下医保卡的办理有要求说什么时候要办完吗，有截止日期吗，可以直接去丽湖那个中国银行办理吗
+      - 医保相关
+      - 请问深圳大学生医保门诊转诊是要到社康制定的医院，而住院是不是就没有限制，哪家医院都可以？
+      - 请问新生医保怎么缴费？
+      - 医保缴费
+      - 为什么登录https://xszz.webvpn.szu.edu.cn/InsuranceConfirm/网址查看医保缴费信息，为什么显示的是未缴费(但是我早已经完成了缴费),家那边有相关人员询问此信息。麻烦工作人员~
+      - 医保缴费记录查询
+      - 请问医保缴费记录从哪里可以查询到
+      - 医保问题
+      - 我19年和20年没有参保，21年缴费参保 但是显示的年份2019年自愿参保 而2020和2021年是未交费
+      - 医保更名
+      - 是今年入学的大一新生，名字已经改好了，但是因为现在不能改学籍所以想知道医保的名字是不是也不能更改
+      - 医保相关
+      - 你好，医保缴费需要校园网，但恰逢中秋假期导致许多同学都无法按时缴费只能错过。查看往年公文通发现有系统延期的先例（https://www1-443.webvpn.szu.edu.cn/board/view.asp?id=399247）希望学生部考虑开放系统多延期一天。
+      - 医保和社保问题
+      - 请问学校的医保可以是建设银行的社保卡吗？
+      - 医保使用问题
+      - 大学生二档医保是否能在深圳大学总医院使用？
+      - 医保转绑问题
+      - 经管法学生已经搬到丽湖校区半月有余，但是医保转绑问题一直被搁置。每年大学生医保保障区间为缴费完成日至8月31日。即9月1日到该年缴费日医保处于停保状态。停保状态下不能对医保卡进行任何操作如转绑社康，也不能享受医保服务。请问要怎么才能解决医保从后海转绑到西丽的问题？
+      - 医保参保
+      - 你好，请问大一放弃参保了，大二能重新申请参保吗
+      - 新冠疫苗
+      - 在学校打了第一针疫苗，可以自己去医院打第二针吗
+      - 医保
+      - 我连续三年交了大学生医保，为什么在微信和支付宝上查询缴费金额为0？
+      - 医保
+      - 医保报销额度是多少？有没有详细的医保政策、流程可供阅读？
+      - 在学校办的医保省外能用吗
+      - 在学校办的医保省外能用吗
+      - 贫困生医保补贴
+      - 想问一问贫困生的医保有补贴吗？就是退还医保费用，谢谢。
+      - 总医院借病号服和被子
+      - 风采大赛道具需要，请问总医院可以借吗，如果可以的话请给出渠道和咨询方式，感谢~
+      - 医保报销
+      - 您好，请问医保卡制卡期间先自费去医院看病，这种情况领了卡之后可以补刷报销费用吗？（学校医保的生效日期写的是10月1号）是直接去医院补刷呢还是？报销的流程是怎么样？
+      - 医保
+      - 已经弃保的还能重新申请医保吗？
+      - 医保卡办理
+      - 我是在深圳买过少儿医保，现在手上有张卡，还要去银行办医保卡吗？
+      - 大学生医保卡的问题
+      - 您好 我想问一下 大学生用医保就医需要的医保卡是需要在哪里办理呢？  我看到公众号上有办理金融社保卡的方式 我想问一下那个金融社保卡和医保卡一样吗？ 去就医报销的话带着金融社保卡就可以了吗？    这个金融社保卡是每个人只能办一张吗   还是说可以办很多张呢？   谢谢您
+      - 医保补贴
+      - https://www1-443.webvpn.szu.edu.cn/board/view.asp?id=431956家庭经济特别困难学生参保实行先按期缴费后补贴。2020-2021学年困难认定工作完成后，学校将对按期在“深圳大学学生保险缴费系统”完成缴费的，且本学年被认定为家庭经济特别困难的学生全额补贴所缴费用。 请问全额补贴包含研究生吗，研究生貌似没有困难认定
+      - 2020年医保
+      - 你好，已经交过2020年的医保费了，为什么在参保信息查询里显示的参保状态是未参保？目前需要使用医保看病，应该怎么办？
+      - 大学生医保报销
+      - 在丽湖校区的深大学生大学生医保报销的流程怎么走啊？
+      - 医保缴费成功 显示未缴费 学生处在哪
+      - 医保缴费成功 显示未缴费 学生处在哪
+      - 深大总医院医保
+      - 现在深大总医院能不能用大学生医保啊？还是说有其他的方式？
+      - 大学生医保漏交怎么办
+      - 去年的医保好像忘记交了 今年可以补交吗
+      - 医保补缴
+      - 请问现在还有办法进行大学生医保补缴吗
+      - 学校医保怎么用
+      - 买了学校医保，去医院有什么用途，能报销什么，今天去医院都是自费，没看到学校医保能干嘛想问清楚下谢谢。
+      - 医保费补交
+      - 我错过了学校集体补缴医保费的时间，请问可以自助补缴吗？
+      - 医保证明
+      - 可不可以开医保已交证明，要有学校盖的章子的那种
+      - 办理医保
+      - 我是大一新生，迁户口到深圳，然后正在办理社保卡，我想问问医保要怎么办理？需要什么材料？
+      - 近期因骨折无法参加军训，因为新生医保卡还未发放，医院方面无法结算，拿不到病例等资料，可以用医生开具的病假单进行办理吗
+
 
 
 
