--- a/data/nlu/library.yml
+++ b/data/nlu/library.yml
@@ -209,4 +209,47 @@ nlu:
       - 请问丽湖校区的同学如何申请将粤海图书馆的书调到丽湖借阅？
       - 图书馆
       - 图书馆相关问题
+      - 万方数据库
+      - 在万方数据库无法进行进一步搜索。
+      - 图书馆有电脑预约吗
+      - 请问图书馆有电脑预约吗，想问问怎么预约
+      - 关于16-18号图书馆的开放
+      - 昨天16号北图和南图在没有任何通知的情况下闭馆了，也没有说清楚是否是疫情管控的缘故，请问从今天17号开始北图和南图是否照常开放呢？
+      - 现在，除了图书馆还有别的学习的地方吗？图书馆都没有合适的位置
+      - 已经办理好图书馆手续和团组织关系转接，但是在办事大厅的学生离校系统上，这两项还是红的（不通过），请问这种情况该联系哪位
+      - 暑假的勤工助学什么时候开放申请呢？申请图书馆需要什么条件呢？
+      - 南图储物柜
+      - 想问一下南图书馆的储物柜是多久清理一次
+      - 校外访问图书馆
+      - 超期还书
+      - 寒假放假回家没办法还书，寒假期间有算逾期天数吗
+      - 图书馆还书
+      - 粤海校区图书馆借的书可以在丽湖图书馆还吗
+      - 图书馆空调问题
+      - 已经向图书馆北馆前台反应这个天气开空调过冷的问题，前台反馈说整个图书馆的空调是一体的，要关只能整个图书馆全关，所以无法操作关冷气。
+      - 图书馆北馆开冷气冻死人
+      - 您好。不懂就问，这么冷的天为啥要开冷气，图书馆里的学生不是裹着毯子就是裹着厚外套。学个习手脚都是冰冷的。
+      - 暑期图书馆开放时间
+      - 请问暑期图书馆时间安排有无具体通知，在什么时间开放呢
+      - 图书馆开得最晚的自习室是哪里，开到几点
+      - 图书馆
+      - 你好，请问元旦节假日粤海校区的图书馆开放时间是？要预约吗？要线上预约吗？还是到现场预约就好？谢谢！
+      - 丽湖借书
+      - 请问丽湖校区的同学如何申请将粤海图书馆的书调到丽湖借阅？
+      - 学校电子书在哪里找
+      - 因为想要的书图书馆没有，就想咨询下学校电子书资源是在哪里找的，急！
+      - 南馆电子阅览室
+      - 请问南馆的电子阅览室免费上机时间是4个小时，如果要续更长时间怎么缴费操作？
+      - 南图书馆
+      - 图书馆书籍即将逾期
+      - 去年年底从图书馆借了一本书，受疫情影响一直未还，今天查询到期时间是4月9号（这应该还是疫情原因已经延期后的时间），目前开学日期遥遥无期，所以图书馆对这种即将逾期的书是怎么处理的？还能继续延期么？
+      - 图书馆的超星图书怎么登陆？
+      - 由于疫情，图书馆的书超期未还怎么处理
+      - 图书馆扫描
+      - 能么能建议学校在图书馆设立扫描区？有些书有些图片或内容需要打印出来，拍照片又容易变形，我听说有些学校的图书馆是有提供学生扫描服务的。
+      - 关于图书馆刷卡进馆的问题
+      - 请问可以增加刷脸或刷校园码进馆的途径吗?久久一次忘记带卡，又住南区，走回去拿一来一回很花时间
+      - 校友证能去图书馆借书吗
+      - 交医保的网站打不开
+      - 电脑用的是宿舍的网线，交医保的网站一直打开是空白，
 
