--- a/data/nlu/logistics.yml
+++ b/data/nlu/logistics.yml
@@ -1,92 +1,6 @@
 version: "2.0"
 nlu:
 
-  - intent: 后勤服务/火车票优惠_资质绑定
-    examples: |
-      - 什么是资质绑定？
-      - 什么是资质绑定
-      - 资质绑定是什么？
-      - 资质绑定是什么
-      - 资质绑定是啥
-      - 资质绑定是啥？
-      - 资质绑定是啥。
-
-  - intent: 后勤服务/火车票优惠_补齐公章
-    examples: |
-      - 乘车前一定要补齐“注册章”和“深圳大学公章”，请问需要怎么补办？
-      - 怎么补办乘车需要的公章？
-      - 怎么补办乘车需要的公章
-      - 怎么补办乘车需要的公章。
-      - 乘车所需公章如何补齐？
-      - 乘车所需公章如何补齐
-
-  - intent: 后勤服务/火车票优惠_如何绑定学生资质
-    examples: |
-      - 如何绑定学生资质？
-      - 如何绑定学生资质
-      - 可以自己绑定学生资质吗？
-      - 我可以自己绑定学生资质吗？
-      - 我可以自己绑定学生资质吗
-      - 怎么绑定学生资质？
-      - 如何绑定学生资质。
-
-  - intent: 后勤服务/火车票优惠_学生证充磁
-    examples: |
-      - 学生证优惠卡一定需要充磁吗？
-      - 学生证优惠卡怎么充磁？
-      - 学生证优惠卡怎么充磁
-      - 学生证怎么充磁？
-      - 学生证怎么充磁。
-      - 火车票优惠卡怎么充磁？
-      - 火车票优惠卡怎么充磁
-      - 请问火车票优惠卡次数用完了现在可以充值吗
-      - 火车票优惠卡次数用完了现在可以充值吗
-      - 火车票优惠卡现在可以充值吗
-      - 请问火车票优惠卡次数用完了现在可以充值吗？
-      - 火车票优惠卡次数用完了现在可以充值吗？
-      - 火车票优惠卡现在可以充值吗？
-      - 火车票优惠卡现在可以充磁吗？
-
-  - intent: 后勤服务/火车票优惠_身份证未核验
-    examples: |
-      - 身份证未核验怎么办？
-      - 购买的是电子客票，可凭身份证进站。可是为什么进站刷身份证时，提示“身份证未核验”，不能通过闸机？
-      - 进站刷身份证时，提示“身份证未核验”，不能通过闸机
-      - 身份证未核验怎么办？
-      - 去哪里核验身份？
-      - 去哪里核验身份。
-      - 怎么核验身份？
-      - 怎么核验身份
-
-  - intent: 后勤服务/火车票优惠_取车票
-    examples: |
-      - 自助售取票机上取不了学生票怎么办？
-      - 电子客票在车站自助售取票机上取票时为什么不点“互联网取票”而是要点“取报销凭证”才能取出车票？
-      - 点“互联网取票”取不了票
-      - 点“互联网取票”取不出票
-      - 点“互联网取票”取不出票？
-      - 自助售取票机上取不了学生票
-
-  - intent: 后勤服务/火车票优惠_无法取票或绑定资质
-    examples: |
-      - 去车站取票时提示“学生证没有绑定身份信息或没有身份证号码”怎么办？
-      - 去车站取票时提示“学生证没有绑定身份信息或没有身份证号码”怎么办
-      - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办？
-      - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办
-      - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办。
-
-  - intent: 后勤服务/火车票优惠_查询学生资质绑定
-    examples: |
-      - 如何查询学生资质绑定成功？
-      - 在哪查询资质绑定信息？
-      - 在哪里可以查询资格绑定信息？
-      - 我在哪里可以查询绑定信息？
-      - 在哪儿查询绑定信息？
-      - 研一新生查不到火车票学生资质
-      - 查不到火车票学生资质
-      - 查不到火车票学生资质怎么办
-      - 查不到火车票学生资质？
-      
   - intent: 后勤服务/谁可以使用心理咨询
     examples: |
       - 谁可以来使用心理咨询服务？
@@ -150,195 +64,13 @@ nlu:
       - 怎么看心理咨询？
       - 怎么样预约心理咨询
 
-  - intent: 后勤服务/宿舍_查询、申请及退宿
-    examples: |
-      - 宿舍查询、申请及退宿
-      - 新生宿舍查询
-      - 宿舍申请入住
-      - 申请调宿
-      - 跨校区调宿
-      - 退宿
-      - 怎么退宿？
-      - 休学退宿
-      - 关于第二批毕业生退宿的疑问
-      - 换宿舍
-      - 宿舍调换
-      - 调宿申请入口
-      - 旧阁老生调宿
-      - 调宿舍
-      - 调宿舍问题
-      - 宿舍对调
-      - 宿舍申请
-      - 调宿
-      - 关于调宿
-      - 调宿问题
-      - 个人调宿系统
-      - 空床位调宿
-      - 宿舍查询
-      - 调换宿舍的问题
-      - 换宿舍
-      - 宿舍空位查询
-      - 调宿舍
-      - 宿舍申请
-      - 想要申请调宿舍
-      - 调宿问题
-
-  - intent: 后勤服务/宿舍_电费查询与充值
-    examples: |
-      - 宿舍电费查询与充值
-      - 宿舍电费查询
-      - 宿舍电费充值
-      - 电费查询
-      - 怎么查电费
-      - 电费充值
-      - 怎么充值电费？
-      - 怎么充宿舍电费
-      - 微信端电费充值
-      - 深圳大学校园卡电费缴费指南
-      - 深大校园卡电费缴费指南
-      - 电费缴费
-      - 校园卡电费缴费指南
-      - 电费缴费指南
-      - 如何在网上缴电费？
-      - 怎么在网上缴电费？
-      - 缴电费的操作指引
-      - 缴电费的操作引导
-      - 缴电费的操作
-      - 学生怎么在网上缴电费？
-      - 学生怎么在网上交电费
-      - 学生如何在网上缴电费？
-      - 可以在网上缴电费吗？
-      - 怎么缴电费？
-      - 缴电费
-      - 交电费
-      - 怎么交电费
-      - 电费的使用情况在哪里查询
-      - 请问丽湖二期的电量使用情况在哪可以查询到？
-      - 在内部网的“宿舍用电查询”中没有二期的用电情况。
-      - 微信端充电费要怎么操作
-      - 微信端电费充值
-      - 请问怎么查宿舍还剩多少度电，在宿舍用电查询那里查不到
-
-  - intent: 后勤服务/宿舍_多久恢复供电和网络
-    examples: |
-      - 在线缴电费和网费后，多久能够恢复供电和网络？
-      - 缴电费和网费后，多久能够恢复供电和网络
-      - 在线缴电费和网费后，多久能够恢复供电和网？
-      - 在线缴电费和网费后多久能够恢复供电网络
-      - 缴电费和网费后，多久能够恢复供电和网
-      - 多久能够恢复供电和网， 已经缴费了
-      - 多久能够恢复供电，刚刚缴费了
-      - 什么时候能恢复网络，已经交费了
-      - 什么时候有网，已经交费了
-      - 缴电费后，多久能够恢复供电
-      - 缴电费后多久能够恢复
-      - 缴网费后多久能够恢复
-      - 缴网费后，多久能够恢复网络
-      - 缴电费后，什么时候能够恢复供电
-      - 缴电费后，什么时候才有电
-      - 交了电费，什么时候才有电
-      - 缴网费后，什么时候能够恢复网络
-      - 缴网费后，什么时候才有网
-      - 缴网费后，嘛时候能够恢复网络
-      - 交了网费，什么时候才有网
-
 
   - intent: 后勤服务/其他
     examples: |
       - 后勤服务相关问题
       - 后勤相关问题
-      - 与火车票优惠卡有关的疑问可以向谁询问吗？
-      - 有关火车票优惠卡的疑问可以问谁？
-      - 火车票优惠卡相关问题可以问谁？
-      - 火车票优惠卡相关的疑问可以向谁咨询？
-      - 与火车票优惠卡有关的疑问可以向谁询问？
-      - 火车票
-      - 火车票优惠卡相关问题
-      - 学生火车票优惠问题
-      - 在学校购买火车票问题
-      - 火车票学生优惠区间怎么修改
-      - 火车票优惠
-      - 请问学活现在可以取火车票了吗
-      - 火车票学生优惠卡
-      - 火车票优惠政策
-      - 火车票优惠卡资质绑定
-      - 应届毕业生还可以买优惠火车票吗？
-      - 毕业生火车票购买
-      - 学生证火车票优惠
-      - 请问研究生火车票优惠这个怎么操作？
-      - 我想知道火车票票优惠政策是怎么样的呀？
-      - 应届毕业生离校还可以买优惠火车票吗？
-      - 请问火车票优惠卡补办是否可以托同学来办理？
-      - 请问现在学活中心可以取火车票了吗
-      - 请问现在学活的火车票自助取票机修好了吗？
-      - 请问今年毕业生暑假还能购买火车票吗？
-      - 火车票优惠卡1月11号还可以补办吗？
-      - 学活现在可以取火车票吗（不是高铁票）
-      - 请问火车票学生优惠卡在丽湖校区哪里办理？
       - 心理咨询相关问题都有什么？
       - 心理咨询相关问题
-      - 请问西丽宿舍用电功率限制是怎么样的
-      - 经管法搬校区之后能否调宿舍？
-      - 关于搬宿舍的问题
-      - 关于本校本科生已录取研究生提前搬宿舍的问题
-      - 空调维修咨询
-      - 宿舍电费
-      - 调宿后的用电
-      - 什么时候可以开始换宿舍
-      - 宿舍床和桌子数量太多
-      - 宿舍
-      - 有关宿舍电费
-      - 宿舍用电24小时申请
-      - 关于粤海、沧海校区学生宿舍调整的问题
-      - 宿舍电费
-      - 宿舍拿东西
-      - 关于申请宿舍
-      - 丽湖宿舍缴费
-      - 本校升学宿舍调换
-      - 毕业后的宿舍杂物清理
-      - 转专业调宿
-      - 关于宿舍电费
-      - 斋区供水
-      - 关于毕业生返校搬宿舍的问题
-      - 宿舍强制熄灯
-      - 经管法搬过去后宿舍问题
-      - 2021级直博生住哪里
-      - 关于宿舍电器功率问题
-      - 新生入住
-      - 寒假留宿
-      - 电费充错到无人居住宿舍
-      - 宿舍排水障碍
-      - 下学期换宿舍的问题
-      - 新生宿舍何时能申请更换宿舍？
-      - 转专业之后的宿舍问题
-      - 换宿舍的电费问题（云杉轩）
-      - 本校硕士直升宿舍安排
-      - 红榴斋宿舍电器功率限制
-      - 内部网哪里可以查询到宿舍电费
-      - 关于宿舍
-      - 转专业后宿舍问题
-      - 关于宿舍床的尺寸
-      - 宿舍床摇动
-      - 宿舍饮水机
-      - 研究生宿舍安排
-      - 乔院宿舍楼下的冰箱
-      - 宿舍喧哗
-      - 宿舍公共卫生间
-      - 关于在哪里可以查询到搬宿舍的最终结果
-      - 新生会入住老生宿舍吗？
-      - 毕业生宿舍电费
-      - 宿舍用电
-      - 关于调宿系统
-      - 调宿系统
-      - 丽湖校区/西丽校区二期宿舍报修
-      - 空床位锁定、调宿、住宿
-      - 室友打鼾太厉害，严重影响睡眠怎么办？
-      - 申请调宿后要怎么确认？
-      - 宿舍椅子更换
-      - 請問宿舍的椅子壞了能換嗎？
-      - 宿舍电费
-      - 调宿后的用电
-      - 老生宿舍新生入住
       - 滑板场地
       - 如何申请暑假留校开展活动场地
       - 《深圳大学学生活动场地申请使用指引》
@@ -370,7 +102,6 @@ nlu:
       - 公司宣讲海报张贴（丽湖校区）
       - 公司招聘宣讲会
       - 海报张贴
-      - 南区冬筑宿舍楼下海报张贴
       - 关于新生快递寄存
       - 快递寄件
       - 寒假快递点安排
@@ -392,7 +123,6 @@ nlu:
       - 预约
       - 维修
       - 申请校外人员入校
-      - 深圳大学住宿管理办法在哪查看全文
       - 20级毕业生想回学校办事
       - 文科楼的长椅可以借用吗？
       - 丽湖琴房
@@ -411,9 +141,7 @@ nlu:
       - 三助一辅岗位
       - 丽湖校区研究生社团申请会议室或教室
       - 毕业生离校
-      - 勤工助学申请
       - 教室借用
-      - 申请勤工助学
       - 非毕业班研究生临时返校申请
       - 研究生二年级返校时间
       - 希望能说明非毕业生何时能返校
@@ -421,7 +149,6 @@ nlu:
       - 暑假进出学校事宜
       - 校外人员回学校上课
       - 学生资质核验
-      - 勤工助学相关
       - 五一放假安排
       - 询问国庆放假相关事宜
       - 放假
@@ -435,6 +162,49 @@ nlu:
       - 三助一辅咨询
       - 三助一辅
       - 军训
+      - 创建新社团
+      - 关于社团创建相关事务
+      - 健身房购票权被禁
+      - 朗读背诵教室安排
+      - 学校的保龄球馆和高尔夫球馆如何预约
+      - 请问毕业后可否作为校友使用校内体育场馆？
+      - 2月1日后学校要求未经审批不得随意进出，请问这段时间留校实习的学生如何进出？
+      - 实习学生出入校问题
+      - 体育场馆预约问题
+      - 请问保龄球在哪个场馆？需要预约吗？在学校的内部网—-体育场馆预约那里找不到，以及现在是否还开放？
+      - 我去年休学，本学期已复学返校。现在账户内没有体育经费，请问如何申请？
+      - 个人信息采集表
+      - 请问一下办理员工临时卡的“个人信息采集表”在哪里下载？
+      - 体育经费为0
+      - 近一年没有使用体育经费，发现经费为0，是什么情况？为什么会被清0？
+      - 研究生毕业离校事宜
+      - 请问研究生毕业离校具体需要办理哪些手续（譬如填表、盖章、退宿等流程之类）？
+      - 什么时间可以开始办理研究生毕业离校？
+      - 本人是在校生，身份证过了有效期限，需要异地换领身份证，但发现未进行居住登记，而没有有效的身份证能否进行登记？近期能否进行申报登记？
+      - 居住登记
+      - 返校取物东西多可以上楼吗
+      - 应届毕业生，已经获得入校审批通过，但是刚看到信息不给上楼，请问可以限时上楼拿吗
+      - 租借科技报告厅或教室
+      - 请问外校企业是否能租借科技报告厅或者教室，如果可以的话具体的申请流程是什么？
+      - 南区店铺
+      - 那条路一直封着，我是新生不太了解具体原因呢，如果开了的话对南区住宿人民真的很友好www
+      - 晚上6点10分排核酸，在元平，整整要排60分钟，很夸张
+      - 吹风机
+      - 钥匙掉了
+      - 对那些抽烟的人
+      - 抽烟区问题
+      - 粤海信件，明信片收寄
+      - 饮水机
+      - 电压上限问题
+      - 丽湖校区通讯信号问题
+      - 寻找肇事车辆该求助哪个部门
+      - 西南有能贴海报的地方吗
+      - 我们有一个活动宣传，但是今年的新生都是住在西南的，所以想问问那边有可以申请来贴海报的地方吗?
+      - 可否让校外的维修师傅进学校维修？
+      - 希望能说明非毕业生何时能返校
+      - 勤工助学申请
+      - 申请勤工助学
+      - 勤工助学相关
       - 请问南区自习室什么时候开？
       - 自习室
       - 有关乔相的自习室
@@ -442,36 +212,100 @@ nlu:
       - 风槐楼下自习室
       - 自习室开放
       - 南区理工楼自习室
-      - 创建新社团
-      - 关于社团创建相关事务
+      - 通宵自习室
+      - 请问哪里有通宵自习室？
       - 健身房购票权被禁
-      - 朗读背诵教室安排
-      - 更改学生优惠证乘车区间
-      - 请问如何更改乘车区间呢？
-      - 学校的保龄球馆和高尔夫球馆如何预约
-      - 请问毕业后可否作为校友使用校内体育场馆？
-      - 2月1日后学校要求未经审批不得随意进出，请问这段时间留校实习的学生如何进出？
-      - 实习学生出入校问题
-      - 体育场馆预约问题
-      - 请问保龄球在哪个场馆？需要预约吗？在学校的内部网—-体育场馆预约那里找不到，以及现在是否还开放？
-      - 请问补办区间优惠火车票需要校园卡吗
-      - 请问今年还能更改火车乘坐区间吗，若有大概是什么时候？
-      - 我去年休学，本学期已复学返校。现在账户内没有体育经费，请问如何申请？
-      - 研究生新生入住前调宿
-      - 个人信息采集表
-      - 请问一下办理员工临时卡的“个人信息采集表”在哪里下载？
-      - 体育经费为0
-      - 近一年没有使用体育经费，发现经费为0，是什么情况？为什么会被清0？
-      - 转专业后如果在原校区还需要换宿舍吗
-      - 没有收到退宿费
-      - 昨天七月1号第二批退宿费发放仍未收到。
-      - 研究生毕业离校事宜
-      - 请问研究生毕业离校具体需要办理哪些手续（譬如填表、盖章、退宿等流程之类）？
-      - 什么时间可以开始办理研究生毕业离校？
-      - 本人是在校生，身份证过了有效期限，需要异地换领身份证，但发现未进行居住登记，而没有有效的身份证能否进行登记？近期能否进行申报登记？
-      - 居住登记
-      - 学生证乘车区间如何修改
-      - 想修改学生证乘车区间
+      - 已毕业学生可进出学校吗
+      - 现在学校学生进出要刷校卡，那已毕业的学生可以进出学校吗。
+      - 勤工俭学
+      - 请问大一新生可以报名勤工俭学吗？
+      - 毕业生户口
+      - 应届毕业生考研清华深研院之后，大一办的深大户口怎么处理
+      - 勤工助学
+      - 九月份勤工助学的薪酬什么时候可以发放到账呢
+      - 自习室
+      - 请问汇文楼和汇紫楼自习室是哪间啊？开放时间？
+      - 勤工俭学工位
+      - 如何预约课室
+      - 户口问题
+      - 说来可能有点搞笑，我大一的时候办理了户口迁移，让你后迁移到了学校集体户，然后也去拍了回执啥的，办理应该是成功了，他叫我一段时间之后去取身份证。但是当时我的旧身份证还是可以继续正常使用的，飞机高铁火车都可以，所以我当时就没有想着去取，然后一不小心就忘记去取了，我现在大四，在考研预报名的时候看到户籍才突然想起自己迁移户口的这么一件事情，非常非常慌乱，现在去取还来得及吗？还是说来不及了要重办理？如果重新办理时间很长的话会不会影响到考研报名啊......真的很慌很慌
+      - 自习室咨询
+      - 请问有开放的自习室吗？具体地点？
+      - 户口迁入
+      - 请问学校里面有没有深圳市联网的拍证件照的地方呢？
+      - 空教室咨询
+      - 想在丽湖空教室自习 但去了发布的自习室内学习结果还是有同学过来上课 请问从哪里可以看到教室的使用情况 例如一个教室一周内到底哪节课有上课
+      - 丽湖通宵自习室
+      - 我想咨询下丽湖校区有没有通宵自习室或者可以通宵的机房
+      - 办事大厅界面有问题
+      - 我的办事大厅界面里的勤工助学入口离奇消失，我每个月需要确认薪资，这是怎么回事？
+      - 暑假勤工俭学
+      - 请问暑假是否可以留校，在校内勤工俭学呢，有没有相关的工作可以做呀
+      - 毕业生本学期勤工助学
+      - 工作时间为5月和6月两个月，想问今年什么时候会关闭毕业生的学校账号？能否在7月份正常收到上一个月的勤工工资。以及本月错过确认时间的工资能否在7月补领(领取两个月)
+      - 户口
+      - 入学后我把户口迁到了深圳大学经济学院2019级，现实习公司要求出具户口簿/卡复印件，应该怎样领取户口簿/卡
+      - 南区自习室
+      - 请问现在南区是否有开放的自习室
+      - 港澳签证
+      - 我的户口迁到了深大的集体户口，在学校内可以办理港澳台签证的续签吗？还是要去校外
+      - 迁户口
+      - 去年入学办的迁户口，记得好像说是要等快一年的时间，再进行下一步手续，请问这个“下一步手续”开始办理了吗？能在哪获得关于迁户口的咨询呢？
+      - 勤工助学相关
+      - 请问在办事大厅中的勤工助学平台如何知道申请的岗位所需的要求（比如时间段），除了给负责人打电话还有其他方法吗
+      - 迁入学校的户口所在地地址
+      - 想问下迁入学校集体户口后，户口所在地详细地址是什么，以及我们档案所在单位就是档案馆吗
+      - 迁入学校的户口所在地地址
+      - 想问下迁入学校集体户口后，户口所在地详细地址是什么，以及我们档案所在单位就是档案馆吗
+      - 大四学生学籍更改什么时候完成？
+      - 我暑假改了名字，是9月的时候给教务处递交的证明材料，网上与线下一同申请的，现在还没有任何变动，仍然处于“待教务处审核”状态。我今年大四了，9月份还要报名考研，如果学籍没改好，会有很大麻烦，想知道能不能在毕业前把学籍改好？最快什么时候能改好？是否还需要什么材料？教务处会不会通知我？？ 急盼复！！
+      - 毕业生户口转回原户籍所在地
+      - 毕业时填写了暂不派遣户口，现在因为考研需要将户口迁回原户籍所在地，请问需要什么手续？如何办理？
+      - 勤工助学申请
+      - 请问在不知道自己的勤工助学申请能否通过审核的情况下，同时申请2-3个勤工助学岗位
+      - 请问南区自习室什么时候开？
+      - 19年硕士研究生身份证问题
+      - 19年入学以后申请了户口迁移及身份证办理，但面临旧身份证接近到期，请问19年的入学的学生什么时候可以领取新的身份证
+      - 港澳签证
+      - 非深圳市户口的学生怎样办港澳通行证？在预约页面填写完信息后说“查大学生库，未查到申请人相关信息”，这是什么原因？
+      - 户口迁移后身份证问题
+      - 开学时办理了户口迁移，前几天到手机营业厅办理业务时工作人员说原身份证里面已经没有信息了，想问问新证什么时候能拿到，担心没有身份证坐高铁飞机会受影响。
+      - 户口簿
+      - 20级本科迁户后，户口簿什么时候可以拿到
+      - 户口查询
+      - 户口移到学校后应该怎么查询自己的户口信息
+      - 想要了解勤工助学岗位
+      - 想要了解勤工助学岗位，现在还能申请报名吗？
+      - 办理身份证
+      - 想问一下，2019级大一转户口的，现在可以去乔梧阁那边的警卫室办理身份证了吗？
+      - 自习室开放
+      - 请问秋瑟自习室和理工楼的自习室还能开放吗
+      - 考研二战毕业生户口
+      - 你好，我想请问一下，考研二战毕业生今年想考本校，选择暂不派遣，那么户口是否算继续放在学校？还是说需要把户口在迁回生源地？
+      - 2019级新生迁户口
+      - 我想咨询一下2019级学生办理迁户口什么时候才有结果？
+      - 身份证补办
+      - 我是大四即将毕业的学生，户口是深大集体户，这段时间身份证内部的芯片损坏了，打算重新办理，会不会对接下来的毕业户口迁移手续有影响，没有户口簿如何补办身份证
+      - 户口迁移和新身份证
+      - 请问九月办理的户口迁移和新身份证什么时候可以拿到？原本的身份证要过期了
+      - 户政办理
+      - 学校深户的如果想要拿到自己户口本复印件要怎么操作呢？
+      - 计生证明办理
+      - 请问在哪里如何办理计生证明
+      - 户口迁移
+      - 在开学时提交了户口迁移申请  但没有去派出所办理 现在可以撤销吗
+      - 迁移户口的身份证做好了吗
+      - 开学的时候 我办理了迁移户口  迁到学校   现在身份证过期了 新的身份证做好了吗
+      - 集体户口  签证
+      - 您好，我是大一时迁到学校集体户口的，然后留学签证需要我在这个月内开具户籍证明。但是现在学校又不让进，我该怎么拿到户籍证明文件呢？
+      - 借户口本
+      - 有急事要办理需要提供复印户口本主页还有个人的户口页，现在想回学校拿，户政室没开门，有什么办法可以联系到户政室那边和拿到这些资料呢？因为真的是很急的事需要马上借到户口本。谢谢！！
+      - 勤工助学错过确认工时时间
+      - 12月份工时确认时间提前了，所以错过了确认时间怎么办？怎么联系相关人员？
+      - 身份证
+      - 2019届新生户口转入学校故无法申请新身份证且无法办理临时身份证，请问怎么办？
+
+
 
   - synonym: 如何
     examples: |
