--- a/data/nlu/network.yml
+++ b/data/nlu/network.yml
@@ -10,6 +10,8 @@ nlu:
     - VPN怎么用
     - vpn使用方法
     - VPN登录
+    - 请问校外如何访问知网？
+    - 在校外如何用知网稳定的在线阅读以及下载全文？
 
 - intent: 校园网服务/校园宽带开通
   examples: |
@@ -95,4 +97,50 @@ nlu:
     - 发现十一月得重新买宽带，但是在内部网选择后，并没有扣费续宽带，仍然说本账号暂停试用。
     - 我需要挂学校的svpn做实验，可是用户名和密码总是显示错误。有尝试过学号校园卡和身份证后6位和后8位的组合。
     - easy connect登录密码忘记，无法正常登录BB，严重影响学校网上学习和作业提交，请求帮助
+    - 进不去丽湖校区体育馆预约系统，显示网络不能进入
+    - 电信网络
+    - 下个月办了20m的电信，现在想改成50了，还可以改吗
+    - 宽带缴费后用不了
+    - 请问学校的宽带缴费后，登录账号登录不了，有可能是什么原因呢
+    - office使用期限
+    - 你好，请问学校提供的office毕业后还能用吗？有使用时限吗？
+    - 校园网络
+    - 请问校园网络还没有到期，可以更换运营商吗？
+    - 网络信息中心办公位置
+    - 请问网络信息中心是否仍在L3-1011办公
+    - bb上显示不出作业栏
+    - 前一天看bb还有作业，今天打开发现没有作业栏提交不了作业怎么办？要联系哪个老师解决？（bb负责老师和网络中心办公电话都是空号？）
+    - 关于校园无线网的连接问题
+    - 我的手机搜索不到学校的无线网SZU-Mobile，然后连接SZU-WLAN也无法获取身份验证界面。想请问下这个问题应该找哪个部门解决呢？
+    - 网络问题
+    - 领航讲座进不去，他说我没有访问权限，但是我连了学校内网的
+    - office软件的账户
+    - 请问一下我们学校有office的免费使用权吗
+    - 自助服务
+    - 网络账号已被停用，但是网络自助服务在升级，不能充网费，怎么办
+    - 校园网络
+    - 为什么我开的20m的网络但是电脑测出的实际网络实际只是10m左右的网络
+    - 校园网格
+    - Dr.com客户端登录时显示：_x000d_本账号暂停使用。_x000d_该怎么解决
+    - 校园网账号
+    - 深大本科推免到深大研究生的，校园网账号是不是会变了，还是说可以继续用下去？ 如果不能继续用的话请问最晚可以用到啥时候，另外如何退多余的网费。 非常感谢
+    - 电话网络忙
+    - 您好。还是 报账审核时间相关 的问题。想请问一下为什么打了好几个学校的8位数的联系电话全都说现在网络忙啊，好几个月了一直是这样。然后请问还有其他联系计划财务部解决这个问题的方式吗，比如邮箱，qq号什么的...谢谢
+    - 上网客户端身份认证失败
+    - 之前都好好的，就今天一直登录不了，提示客户端认证失败。也没有欠费。
+    - 统一身份认证接口
+    - 请问深大的统一身份认证接口能对外开放吗？想在毕业设计中嵌入一个统一身份认证的功能。
+    - 修改统一身份认证密码
+    - 你好，最近发现网络一直断，怀疑有人盗用我的账号上网，想要修改统一身份认证密码，不知道要如何修改。
+    - 昨天我在使用校园网时遇到了一个问题：我可以正常通过WebVPN访问内部网、办事大厅，但是不能访问学校图书馆，一直白屏。 我尝试过重启网页、网络、电脑，删除cookie、更换浏览器也没有用。直到今天也还不能使用，对学习产生了不小影响，望早日解决！
+    - 宿舍网络
+    - 自从10月16日停电之后，一直连不上网络
+    - 用华为平板在深大丽湖校区宿舍里连接WIFI SZU_CTC&CMCC时，验证网页显示的是请用Dr.com登陆（和用电脑一样） ，但是用手机连接可以很顺利的填验证信息登录，而华为平板在现在鸿蒙系统和升级前的安卓系统都不能通过验证信息网址连接WIFI，请问平板这个问题怎么解决
+    - 请问宿舍网络不好 可以去哪里投诉反馈？
+    - 宿舍宽带
+    - 学生宿舍的宽带能不能接路由器啊  开热点好慢啊
+    - 交了一年的网费，中间不在的几个月能退吗
+    - 宽带收费
+    - 由于疫情关系，研三学生办理一年宽带实际才用半年时间，但是今年五月底到期，学校可否协调后面一两个月是否可以不予收费且继续使用。
+
 
