--- a/data/nlu/student_id.yml
+++ b/data/nlu/student_id.yml
@@ -1,6 +1,7 @@
 version: "2.0"
 nlu:
-- intent: 校园卡/修改校园卡信息
+
+- intent: 学生证件/修改校园卡信息
   examples: |
     - 我可以修改校园卡的基本信息吗？
     - 我可以修改校卡的基本信息吗？
@@ -25,7 +26,8 @@ nlu:
     - 修改校园卡信息
     - 校园卡的基本信息
     - 改变校园卡信息
-- intent: 校园卡/交易流水时限
+
+- intent: 学生证件/交易流水时限
   examples: |
     - 我可以查询三个月或更早以前的校园卡交易流水吗？
     - 校园卡交易流水最多能查询到啥时候的？
@@ -38,7 +40,8 @@ nlu:
     - 校卡交易流水能查多久的
     - 校园卡交易流水能查一年前的吗
     - 校园卡交易流水能查两年前的吗？
-- intent: 校园卡/校园卡丢失
+
+- intent: 学生证件/校园卡丢失及补办
   examples: |
     - 我的校园卡丢失了怎么办？
     - 我的校园卡遗失了怎么办？
@@ -56,14 +59,15 @@ nlu:
     - 校园卡不见了
     - 校园卡被我弄丢了
     - 校园卡弄丢
-- intent: 校园卡/校园卡补办
-  examples: |
     - 怎么补办校园卡？
     - 校园卡补办
     - 校园卡怎么补办
+    - 校园卡丢了怎么补办
     - 请问该如何补办校园卡
     - 校园卡从早上到现在一直没找到，请问能补办吗，补办之后大概要多久能拿到，没有校园卡洗澡困难阿。
-- intent: 校园卡/校园卡充值指南
+
+
+- intent: 学生证件/校园卡充值指南
   examples: |
     - 深圳大学校园卡充值指南
     - 深大校园卡充值指南
@@ -82,7 +86,8 @@ nlu:
     - 充值校园卡
     - 怎么充值校园卡
     - 怎么给校园卡充值
-- intent: 校园卡/体育经费说明
+
+- intent: 学生证件/体育经费说明
   examples: |
     - 校园卡内体育专项经费说明
     - 校园卡内体育经费说明
@@ -100,7 +105,8 @@ nlu:
     - 体育经费下学期补充
     - 体育经费是每年发放还是
     - 学校每年什么时候会更新体育经费呀?
-- intent: 校园卡/自助挂失及解挂
+
+- intent: 学生证件/自助挂失及解挂
   examples: |
     - 校园卡自助挂失及解挂
     - 微信可以自助挂失及解挂校园卡
@@ -119,14 +125,15 @@ nlu:
     - 怎么挂失校园卡？
     - 挂失校卡
     - 解挂校卡
-- intent: 校园卡/领取微信校园卡
+
+- intent: 学生证件/领取微信校园卡
   examples: |
     - 怎么领取微信校园卡？
     - 领取微信校园卡
     - 怎么领取微信校园卡
     - 微信校园卡怎么领
 
-- intent: 校园卡/学生证补办
+- intent: 学生证件/学生证丢失及补办
   examples: |
     - 学生证补办
     - 学生证怎么补办
@@ -136,10 +143,117 @@ nlu:
     - 补办学生证
     - 补办学生证只需要下载补办登记表然后学院盖章后交到学活就行了吧，还有其他文件吗
     - 补办学生证需要校园卡吗，校园卡遗失能在学活补办吗？补办学生证大概需要多久，能立刻拿到吗
+    - 学生证补办
+    - 学生证不见了在哪补办
+    - 报到相关：学生证不见
+    - 请问学生证不见了，9.1那天可以入学报到吗？如果不能的话需要在哪补办吗？ 地址：丽湖校区
+    - 研究生学生证丢失
+    - 学生证丢了
+    - 学生证丢了在哪补办
+    - 学生证丢了怎么办
 
-- intent: 校园卡/其他
+- intent: 学生证件/火车票优惠_资质绑定
   examples: |
-    - 校园卡相关问题
+    - 什么是资质绑定？
+    - 什么是资质绑定
+    - 资质绑定是什么？
+    - 资质绑定是什么
+    - 资质绑定是啥
+    - 资质绑定是啥？
+    - 资质绑定是啥。
+
+- intent: 学生证件/火车票优惠_补齐公章
+  examples: |
+    - 乘车前一定要补齐“注册章”和“深圳大学公章”，请问需要怎么补办？
+    - 怎么补办乘车需要的公章？
+    - 怎么补办乘车需要的公章
+    - 怎么补办乘车需要的公章。
+    - 乘车所需公章如何补齐？
+    - 乘车所需公章如何补齐
+
+- intent: 学生证件/火车票优惠_如何绑定学生资质
+  examples: |
+    - 如何绑定学生资质？
+    - 如何绑定学生资质
+    - 可以自己绑定学生资质吗？
+    - 我可以自己绑定学生资质吗？
+    - 我可以自己绑定学生资质吗
+    - 怎么绑定学生资质？
+    - 如何绑定学生资质。
+    - 火车票优惠卡资质绑定
+
+- intent: 学生证件/火车票优惠_学生证充磁
+  examples: |
+    - 学生证优惠卡一定需要充磁吗？
+    - 学生证优惠卡怎么充磁？
+    - 学生证优惠卡怎么充磁
+    - 学生证怎么充磁？
+    - 学生证怎么充磁。
+    - 火车票优惠卡怎么充磁？
+    - 火车票优惠卡怎么充磁
+    - 请问火车票优惠卡次数用完了现在可以充值吗
+    - 火车票优惠卡次数用完了现在可以充值吗
+    - 火车票优惠卡现在可以充值吗
+    - 请问火车票优惠卡次数用完了现在可以充值吗？
+    - 火车票优惠卡次数用完了现在可以充值吗？
+    - 火车票优惠卡现在可以充值吗？
+    - 火车票优惠卡现在可以充磁吗？
+    - 学生证充磁
+    - 现在还可以在学校充磁吗，有自助充磁机吗
+
+- intent: 学生证件/火车票优惠_身份证未核验
+  examples: |
+    - 身份证未核验怎么办？
+    - 购买的是电子客票，可凭身份证进站。可是为什么进站刷身份证时，提示“身份证未核验”，不能通过闸机？
+    - 进站刷身份证时，提示“身份证未核验”，不能通过闸机
+    - 身份证未核验怎么办？
+    - 去哪里核验身份？
+    - 去哪里核验身份。
+    - 怎么核验身份？
+    - 怎么核验身份
+
+- intent: 学生证件/火车票优惠_取车票
+  examples: |
+    - 自助售取票机上取不了学生票怎么办？
+    - 电子客票在车站自助售取票机上取票时为什么不点“互联网取票”而是要点“取报销凭证”才能取出车票？
+    - 点“互联网取票”取不了票
+    - 点“互联网取票”取不出票
+    - 点“互联网取票”取不出票？
+    - 自助售取票机上取不了学生票
+
+- intent: 学生证件/火车票优惠_无法取票或绑定资质
+  examples: |
+    - 去车站取票时提示“学生证没有绑定身份信息或没有身份证号码”怎么办？
+    - 去车站取票时提示“学生证没有绑定身份信息或没有身份证号码”怎么办
+    - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办？
+    - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办
+    - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办。
+
+- intent: 学生证件/火车票优惠_查询学生资质绑定
+  examples: |
+    - 如何查询学生资质绑定成功？
+    - 在哪查询资质绑定信息？
+    - 在哪里可以查询资格绑定信息？
+    - 我在哪里可以查询绑定信息？
+    - 在哪儿查询绑定信息？
+    - 研一新生查不到火车票学生资质
+    - 查不到火车票学生资质
+    - 查不到火车票学生资质怎么办
+    - 查不到火车票学生资质？
+
+- intent: 学生证件/其他
+  examples: |
+    - 学生证件相关问题
+    - 更换学生证
+    - 毕业证、学位证及学生证
+    - 只带身份证学生证可以参加考试吗
+    - 学生证
+    - 学生证注册章补盖
+    - 一般学生证补办后多久可以去取？
+    - 学生证注册章补盖
+    - 毕业离校后是否还能凭校园卡自助打印相关证明文件呢？
+    - 研究生入学的学业奖学金申请表里的校园卡银行号填错了，可以更改吗？
+    - 是否需要用校园卡感应才能打印在读证明呢
     - 校园卡服务相关问题
     - 校园卡和通用代扣账户
     - 微信充值校园卡通用代扣账户是否能退
@@ -263,6 +377,75 @@ nlu:
     - 校园卡充值问题
     - 昨天在老西南的圈存机给校园卡充值150，之后在旁边补助机刷了之后只是显示到账了140，这种事情是啥情况？那十块钱被吞了吗？
     - 我是新斋区的，这几天洗澡的时候插上校园卡就会显示err04或者err30，补办了校园卡也不能解决，请问要怎么办
+    - 因购票使用他人校卡，被发现
+    - 研究生学生证入学后什么时候发放呢？
+    - 请问研究生入学后什么时候会发放学生证呢
+    - 丽湖校区,学生证去哪里充磁
+    - 学生证有效期限
+    - 我是预计21年毕业的2016级学生，实习的公司要求提供有效的学生证复印件，但是学生证上有效期为至2020年7月，如何办理证件延长？
+    - 学生证
+    - 你好，我是2016级学生，延毕一年，目前学生证已经到期，请问接下来是需要重新补办学生证吗？因为报名了研究生考试，需要用到学生证，所以着急得到回答。另外如果重新补办，流程是什么？
+    - 学校身份证还没到，旧的身份证过期了，这种情况怎么处理？
+    - 毕业证、学位证及学生证
+    - 请问： 1、研究生的话7月6号具体什么时间开始发或者可以领取毕业证学位证，早上可以领取吗，可以代领吗 2、领取毕业证学位证需要上交学生证吗 3、毕业后（即领取双证后）还能最后一次购买学生票吗
+    - 请问事务中心寒假开放时间是什么呢？还可以进行学生证充磁吗？
+    - 研究生学生证丢失
+    - 补办学生证
+    - 未找到该学生的资质和购票记录，请问该怎么做？
+    - 学生证盖章
+    - 我是电子与信息工程学院新生，学生证发下来时，注册栏没有盖章，是否影响火车票优惠，在哪里能补盖？
+    - 乘车区间
+    - 你好，我想问一下学生证上填写的终点站是郑州东站，那么我买车票的时候可以买到郑州站的吗，都是郑州市的。需要去学活改为郑州吗？
+    - 你好，我想咨询一下，学生证上的乘车区间如果是深圳--梅州，现在我想买深圳北--梅州西的高铁票，请问需要修改乘车区间吗？如果要的话，要怎么修改呢？
+    - 火车票学生优惠卡补办
+    - 因为没有及时地更改自己的乘车区间，拿到学生证后发现没有火车票学生优惠卡，如何补办？
+    - 火车票优惠政策
+    - 你好，我想知到火车票票优惠政策是怎么样的呀？详情在哪里可以找到呢？
+    - 更改学生优惠证乘车区间
+    - 请问如何更改乘车区间呢？
+    - 动车优惠未刷
+    - 2020年冬的优惠车间我没有去刷，现在要去买票好可以优惠吗？需要现场买吗？
+    - 毕业生还能购买学生票吗
+    - 2020本科毕业生还能不能凭学生证享受学生票优惠
+    - 请问在app上买票以后，是要去高铁站的什么特定窗口取票呢？ 谢谢
+    - 学生证火车票优惠
+    - 请问补办区间优惠火车票需要校园卡吗
+    - 学生证乘车区间如何修改
+    - 想修改学生证乘车区间
+    - 乘车资质咨询
+    - 补充一下，我去年是符合优惠条件的，好像一年要去事务中心充磁一次对吧，为什么我充了然后说我不符合，是没充到吗?
+    - 学生乘车优惠资质
+    - 12月去事务中心充磁了，但是买票显示我的学生资质失效了，请问怎么会有这种情况，该怎么办呢？
+    - 请问很多同学错过了这周末的火车票优惠卡资质绑定，学校这学期还能申请到这项业务办理吗？如果自行前往火车站办理需要带什么证件？大概多久能绑定成功？
+    - 与火车票优惠卡有关的疑问可以向谁询问吗？
+    - 有关火车票优惠卡的疑问可以问谁？
+    - 火车票优惠卡相关问题可以问谁？
+    - 火车票优惠卡相关的疑问可以向谁咨询？
+    - 与火车票优惠卡有关的疑问可以向谁询问？
+    - 火车票
+    - 火车票优惠卡相关问题
+    - 学生火车票优惠问题
+    - 在学校购买火车票问题
+    - 火车票学生优惠区间怎么修改
+    - 火车票优惠
+    - 请问学活现在可以取火车票了吗
+    - 火车票学生优惠卡
+    - 火车票优惠政策
+    - 火车票优惠卡资质绑定
+    - 应届毕业生还可以买优惠火车票吗？
+    - 毕业生火车票购买
+    - 请问研究生火车票优惠这个怎么操作？
+    - 我想知道火车票票优惠政策是怎么样的呀？
+    - 应届毕业生离校还可以买优惠火车票吗？
+    - 请问火车票优惠卡补办是否可以托同学来办理？
+    - 请问现在学活中心可以取火车票了吗
+    - 请问现在学活的火车票自助取票机修好了吗？
+    - 请问今年毕业生暑假还能购买火车票吗？
+    - 火车票优惠卡1月11号还可以补办吗？
+    - 学活现在可以取火车票吗（不是高铁票）
+    - 请问火车票学生优惠卡在丽湖校区哪里办理？
+    - 请问今年还能更改火车乘坐区间吗，若有大概是什么时候？
+    - 请问一下毕业证，学位证可以提前申请领取吗？不能的话除了让被委托人代领还有其他解决办法吗？谢谢
 
 
 
