--- a/data/stories/cqa_stories.yml
+++ b/data/stories/cqa_stories.yml
@@ -7,8 +7,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -25,8 +30,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -44,8 +54,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -63,8 +78,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -82,8 +102,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -101,8 +126,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -121,8 +151,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -140,8 +175,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -159,8 +199,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -178,8 +223,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -193,8 +243,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
