--- a/data/stories/fallback_stories.yml
+++ b/data/stories/fallback_stories.yml
@@ -9,8 +9,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -89,8 +94,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -176,8 +186,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
@@ -195,8 +210,13 @@ stories:
           - intent: 图书馆服务
           - intent: 就业指导
           - intent: 后勤服务
+          - intent: 宿舍服务
           - intent: 教学教务
-          - intent: 校园卡
+          - intent: 奖助学金
+          - intent: 专业修读
+          - intent: 补考缓考
+          - intent: 选课事宜
+          - intent: 学生证件
           - intent: 校医院
           - intent: 校园网服务
           - intent: 本科生招生
