--- a/domain.yml
+++ b/domain.yml
@@ -21,15 +21,20 @@ intents:
 - 图书馆服务
 - 就业指导
 - 后勤服务
+- 宿舍服务
 - 查询天气
 - 教学教务
-- 校园卡
+- 学生证件
 - 校医院
 - 校园网服务
 - 本科生招生
 - 研究生招生
 - 迎新服务
 - 常用联系方式
+- 奖助学金
+- 补考缓考
+- 选课事宜
+- 专业修读
 - community_qa
 - document_qa
 entities:
